set min-width on account_dropdown avatar to prevent ie 11 squish

--- a/app/assets/stylesheets/forever_style_guide/modules/_nav-account_dropdown.scss
+++ b/app/assets/stylesheets/forever_style_guide/modules/_nav-account_dropdown.scss
@@ -1,6 +1,7 @@
 // desktop authenticated account dropdown styling
 $avatar-height: 35px;
 $avatar-width: 35px;
+$avatar-sm-width: 70px;
 
 $user_info-max_width: 100px;
 $user_info-max_width-sm: 70px;
@@ -90,6 +91,7 @@ $padding-small-horizontal: 3px;
 }
 
 .navigation-account_dropdown-avatar {
+  min-width: $avatar-sm-width; // fixes an ie 11 flexbug
   margin: 0;
   margin-right: $padding-large-horizontal;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
